fix copyright on mobile using font size and less hr

--- a/responsive.css
+++ b/responsive.css
@@ -75,6 +75,6 @@
 
   .copyright {
     top: 95.5%;
-    font-size: 0.6em;
+    font-size: 0.5em;
   }
 }
